@@ -4,12 +4,13 @@ import com.es.phoneshop.model.pricehistory.PriceHistoryElement;
 import com.es.phoneshop.model.product.ArrayListProductDao;
 import com.es.phoneshop.model.product.Product;
 import com.es.phoneshop.model.product.ProductDao;
-import com.sun.tools.javac.util.List;
+
 
 import javax.servlet.ServletContextEvent;
 import javax.servlet.ServletContextListener;
 import java.math.BigDecimal;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Currency;
 import java.util.stream.IntStream;
 
@@ -57,7 +58,7 @@ public class DemoDataServletContextListener implements ServletContextListener {
         productDao.save(new Product("simc61", "Siemens C61", new BigDecimal(80), usd, 30, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20C61.jpg"));
         productDao.save(new Product("simsxg75", "Siemens SXG75", new BigDecimal(150), usd, 40, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg"));
         productDao.getProduct(firstElement).setPriceHistory(
-                new ArrayList<>(List.of(
+                new ArrayList<>(Arrays.asList(
                         new PriceHistoryElement("25.3", productDao.getProduct(firstElement).getPrice(), usd),
                         new PriceHistoryElement("25.4", new BigDecimal(100), usd),
                         new PriceHistoryElement("25.3", new BigDecimal(4), usd)
@@ -65,9 +66,8 @@ public class DemoDataServletContextListener implements ServletContextListener {
         );
         IntStream.range(secondElement, lastElement).
                 forEach(i -> productDao.getProduct((long) i).setPriceHistory(new ArrayList<>(
-                                List.of(new PriceHistoryElement("25.3", productDao.getProduct((long) i).getPrice(), usd)))
+                                Arrays.asList(new PriceHistoryElement("25.3", productDao.getProduct((long) i).getPrice(), usd)))
                         ));
-
 
     }
 }
